--- a/package.json
+++ b/package.json
@@ -10,14 +10,22 @@
   },
   "dependencies": {
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
+    "houseform": "^1.11.1",
+    "js-cookie": "^3.0.5",
     "next": "13.4.16",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.3",
     "sharp": "^0.32.5",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "3.3.3",
+    "zod": "^3.22.2",
+    "zustand": "^4.4.1"
   }
 }
