--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "autoprefixer": "10.4.15",
     "aws-amplify": "^5.3.10",
     "axios": "^1.5.0",
