--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.16",
     "houseform": "^1.11.1",
     "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
     "next": "13.4.16",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
