--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@paypal/react-paypal-js": "^8.1.3",
+    "@stripe/react-stripe-js": "^2.3.0",
+    "@stripe/stripe-js": "^2.1.5",
     "autoprefixer": "10.4.15",
     "aws-amplify": "^5.3.10",
     "axios": "^1.5.0",
