--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.10",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "houseform": "^1.11.1",
