--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.2",
     "zustand": "^4.4.1"
