--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
