--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "18.2.0",
     "react-loader-spinner": "^5.4.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
