--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
