--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
+    "socket.io-client": "^4.4.1",
     "swiper": "^11.0.3",
     "tailwindcss": "3.3.3",
     "zod": "^3.22.2",
