--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "eslint-config-next": "13.4.16",
     "houseform": "^1.11.1",
     "js-cookie": "^3.0.5",
-    "moment": "^2.29.4",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.44",
     "next": "13.4.16",
     "next-auth": "^4.23.2",
     "postcss": "8.4.28",
