--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "houseform": "^1.11.1",
+    "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
