--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-ga4": "^2.1.0",
     "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
     "react-responsive-carousel": "^3.2.23",
