--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.5",
+    "@bradgarropy/next-google-analytics": "^1.0.2",
     "@paypal/react-paypal-js": "^8.1.3",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
@@ -33,7 +34,6 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
-    "react-ga4": "^2.1.0",
     "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
     "react-responsive-carousel": "^3.2.23",
