--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dom": "18.2.0",
     "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
+    "react-phone-input-2": "^2.15.1",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
