--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^4.6.5",
     "@bradgarropy/next-google-analytics": "^1.0.2",
+    "@fingerprintjs/fingerprintjs": "^4.6.1",
     "@paypal/react-paypal-js": "^8.1.3",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
