--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
+    "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
     "react-phone-input-2": "^2.15.1",
