--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@aws-amplify/ui-react": "^4.6.5",
     "@bradgarropy/next-google-analytics": "^1.0.2",
     "@fingerprintjs/fingerprintjs": "^4.6.1",
+    "@headlessui/react": "^2.2.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
@@ -39,6 +40,7 @@
     "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
     "react-phone-input-2": "^2.15.1",
+    "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
