--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "dayjs": "^1.11.10",
+    "emoji-flags": "^1.3.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "flag-icons": "^7.5.0",
     "houseform": "^1.11.1",
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
+    "libphonenumber-js": "^1.12.9",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "next": "13.4.16",
@@ -42,9 +44,11 @@
     "react-image-crop": "^11.0.1",
     "react-loader-spinner": "^5.4.5",
     "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.4.12",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-select": "^5.8.0",
+    "react-select-country-list": "^2.2.3",
     "react-slick": "^0.29.0",
     "react-toastify": "^9.1.3",
     "slick-carousel": "^1.8.1",
