--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "moment-timezone": "^0.5.44",
     "next": "13.4.16",
     "next-auth": "^4.23.2",
+    "next-themes": "^0.4.6",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
