--- a/package.json
+++ b/package.json
@@ -9,33 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^4.6.5",
     "@bradgarropy/next-google-analytics": "^1.0.2",
     "@fingerprintjs/fingerprintjs": "^4.6.1",
     "@headlessui/react": "^2.2.4",
     "@paypal/react-paypal-js": "^8.1.3",
     "@stripe/react-stripe-js": "^2.3.0",
     "@stripe/stripe-js": "^2.1.5",
-    "autoprefixer": "10.4.15",
-    "aws-amplify": "^5.3.10",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.5.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
     "dayjs": "^1.11.10",
-    "emoji-flags": "^1.3.0",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.16",
+    "eslint-config-next": "14.2.4",
     "flag-icons": "^7.5.0",
     "houseform": "^1.11.1",
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
-    "libphonenumber-js": "^1.12.9",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
-    "next": "13.4.16",
+    "next": "^14.2.4",
     "next-auth": "^4.23.2",
-    "postcss": "8.4.28",
+    "next-themes": "^0.4.6",
+    "postcss": "^8.4.38",
     "react": "18.2.0",
     "react-day-picker": "^8.8.1",
     "react-dom": "18.2.0",
@@ -54,8 +51,8 @@
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.4.1",
     "swiper": "^11.0.3",
-    "tailwindcss": "3.3.3",
-    "zod": "^3.22.2",
+    "tailwindcss": "^3.4.3",
+    "zod": "^3.22.4",
     "zustand": "^4.4.1"
   }
 }
