--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm-run-all --parallel show-qr next-dev",
+    "next-dev": "next dev",
+    "show-qr": "node show-qr.js",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -54,5 +56,9 @@
     "tailwindcss": "^3.4.3",
     "zod": "^3.22.4",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "qrcode-terminal": "^0.12.0"
   }
 }
