--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "houseform": "^1.11.1",
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "next": "^14.2.4",
