--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "howler": "^2.2.4",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "luxon": "^3.7.1",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.44",
     "next": "^14.2.4",
